--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1390,6 +1390,16 @@ config STUNE_ASSIST
 
 	  If unsure, say N.
 
+config CPUSETS_ASSIST
+	bool "Cpusets configuration helper"
+	depends on CPUSETS
+	depends on ANDROID
+	help
+	  This option enables the configuration of default cpusets
+	  parameters from kernel.
+
+	  If unsure, say N.
+
 config DYNAMIC_STUNE_BOOST
 	bool "Dynamic SchedTune boosting support"
 	depends on SCHED_TUNE && CGROUP_SCHEDTUNE
