--- a/arch/arm64/configs/whyred_defconfig
+++ b/arch/arm64/configs/whyred_defconfig
@@ -320,6 +320,7 @@ CONFIG_INPUT_KEYRESET=y
 CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_TOUCHSCREEN=y
+CONFIG_TOUCHSCREEN_COMMON=y
 CONFIG_TOUCHSCREEN_NVT_E7S=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_E7S_I2C=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_E7S_CORE=y
